# harrington

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/notes/: 2026-05-19-aes-chain-trace.md  2026-05-20-corpus-diff-audit.md  2026-05-20-security-audit.md
docs/superpowers/plans/: 2026-05-18-batdeob-plan-A-foundation.md  2026-05-19-batdeob-plan-B-controlflow.md  2026-05-19-batdeob-plan-C-lolbas-corpus-ci.md  2026-05-19-batdeob-plan-D-correctness.md  2026-05-19-batdeob-plan-E-summary-mode.md  2026-05-19-batdeob-plan-F-analyst-polish.md  2026-05-19-batdeob-plan-G-recursive-ps-html.md  2026-05-19-batdeob-plan-H-deeper-deobfuscation.md  2026-05-19-batdeob-plan-I-powershell-bugs.md  2026-05-19-batdeob-plan-J-minusone-integration.md  2026-05-19-batdeob-plan-K-deob-url-sweep.md  2026-05-19-batdeob-plan-L-webdav-and-inline-b64.md  2026-05-19-batdeob-plan-M-comment-payload-and-minusone-cleanup.md  2026-05-19-batdeob-plan-N-residual-patterns.md  2026-05-19-batdeob-plan-O-cmd-js-trunc-aliases.md  2026-05-19-batdeob-plan-S-aes-chain.md  2026-05-19-batdeob-plan-T-dotnet-us-stream.md
docs/superpowers/specs/: 2026-05-18-batdeob-rust-port-design.md
rust/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
rust/crates/batdeob-cli/: Cargo.toml
rust/crates/batdeob-cli/src/: main.rs
rust/crates/batdeob-cli/tests/: cli.rs
rust/crates/batdeob-core/: Cargo.toml
rust/crates/batdeob-core/data/: win10.json  win11.json  win7.json
rust/crates/batdeob-core/examples/: basic.rs  batch_url_extract.rs  custom_config.rs  filter_aes_dropper.rs
rust/crates/batdeob-core/src/: aes_chain.rs  arith.rs  deob_scan.rs  env.rs  for_loop.rs  interp.rs  js_scan.rs  labels.rs  lex.rs  lib.rs  line_reader.rs  marker_noise.rs  normalize.rs  ps1_scan.rs  ps_alias.rs  redirect.rs  snapshot.rs  split.rs  synth.rs  traits.rs  util.rs  vbs_scan.rs
rust/crates/batdeob-core/src/aes_chain/: crypto.rs  dotnet.rs  orchestrator.rs  payload_lines.rs  ps_extract.rs  scan.rs
rust/crates/batdeob-core/src/handlers/: aria2.rs  auto_elevate.rs  bitsadmin.rs  call.rs  certoc.rs  certreq.rs  certutil.rs  cmd.rs  cmstp.rs  copy.rs  cscript.rs  curl.rs  desktopimgdownldr.rs  echo.rs  esentutl.rs  extrac32.rs  for_cmd.rs  forfiles.rs  ftp.rs  goto.rs  hh.rs  if_cmd.rs  mod.rs  msconfig.rs  mshta.rs  msiexec.rs  net.rs  passthrough.rs  powershell.rs  regsvr32.rs  replace.rs  robocopy.rs  rundll32.rs  set.rs  setlocal.rs  url_launch.rs  util.rs  wget.rs  wmic.rs
rust/crates/batdeob-core/tests/: corpus_regression.rs  parity_basic.rs
rust/crates/batdeob-core/tests/corpus/: 1101630210483563.bat  1174812481055222717.bat  1252411979215416311.bat  140475731426311004.bat  1567349881556632761.bat  1704594822175815255.bat  187516697224075772.bat  199817585460029504.bat  2397020155209356283.bat  245815630185839899.bat  2661824215630422362.bat  3096921446474926403.bat  32363176915133614.bat  3360300701166418019.bat  3816257353170624318.bat  50perikarya30lv.bat  6929137951900316509.bat  8420241563271815452.bat  8697282281796814385.bat  90012693170731218.bat  92467493270125073.bat  DOKUMENTEN_TOBIAS.bat  FW-APGKSDTPX4HOAUJJMBVDNXPOHZ.PDF.bat  FX.cmd  Install.bat  Invoice_6238829.bat  NG1.bat  QUOTE_7254.bat  _impactfulbrands.co.uk__________________________________________.html.bat  cat.bat  dei.bat  installer.bat  jan.bat  run.bat
rust/crates/harrington-cli/: Cargo.toml
rust/crates/harrington-cli/src/: main.rs
rust/crates/harrington-cli/tests/: cli.rs
rust/crates/harrington-core/: Cargo.toml
rust/crates/harrington-core/data/: win11.json
rust/crates/harrington-core/examples/: basic.rs  batch_url_extract.rs  custom_config.rs  filter_aes_dropper.rs
rust/crates/harrington-core/src/: arith.rs  deob_scan.rs  env.rs  for_loop.rs  interp.rs  js_scan.rs  labels.rs  lex.rs  lib.rs  line_reader.rs  marker_noise.rs  normalize.rs  ps1_scan.rs  ps_alias.rs  redirect.rs  split.rs  synth.rs  traits.rs  vbs_scan.rs
rust/crates/harrington-core/src/aes_chain/: crypto.rs  dotnet.rs  orchestrator.rs  ps_extract.rs  scan.rs
rust/crates/harrington-core/src/handlers/: aria2.rs  auto_elevate.rs  bitsadmin.rs  call.rs  certoc.rs  certreq.rs  certutil.rs  cmd.rs  cmstp.rs  copy.rs  cscript.rs  curl.rs  desktopimgdownldr.rs  echo.rs  esentutl.rs  extrac32.rs  for_cmd.rs  forfiles.rs  ftp.rs  goto.rs  hh.rs  if_cmd.rs  mod.rs  msconfig.rs  mshta.rs  msiexec.rs  net.rs  passthrough.rs  powershell.rs  regsvr32.rs  replace.rs  robocopy.rs  rundll32.rs  set.rs  setlocal.rs  url_launch.rs  util.rs  wget.rs  wmic.rs
rust/crates/harrington-core/tests/: parity_basic.rs
rust/fuzz/: Cargo.toml  README.md
rust/fuzz/fuzz_targets/: analyze.rs  decimal_ip_urls.rs  extract_cmd_inner.rs  marker_noise.rs
rust/tools/: agent_gap_benchmark.py  agent_gap_benchmark_tasks.json  cape_batch_compare.py  cape_batch_run.py  cape_child_gaps.py  cape_compare.py  cape_pull_reports.py  cape_resubmit.py  cape_submit.py  cape_tree_diff.py  collect-windows-env.bat  compare_minusone.py  corpus_audit.py  corpus_iterate.py  corpus_run.py  diff_url_vs_cmp.py  test_agent_gap_benchmark.py  test_compare_minusone.py  test_corpus_audit.py  test_corpus_iterate.py  test_corpus_run.py
rust/tools/extract-from-wim/: .gitignore  README.md  extract.py
rust/tools/extract-from-wim/data/: win11.json
