[workspace]
resolver = "2"
members = ["crates/harrington-core", "crates/harrington-cli"]
exclude = ["fuzz"]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/wmetcalf/harrington"
homepage = "https://github.com/wmetcalf/harrington"
readme = "../../README.md"
authors = ["Will Metcalf <william.metcalf@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"
once_cell = "1.19"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
anyhow = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
flate2 = "1"
libc = "0.2"
# dev
proptest = "1.4"
assert_cmd = "2.0"
pretty_assertions = "1.4"
tempfile = "3.10"
predicates = "3"
