[workspace]
resolver = "2"
members = ["crates/batdeob-core", "crates/batdeob-cli"]
exclude = ["fuzz"]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/willmetcalf/batch_deobfuscator"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"
once_cell = "1.19"
clap = { version = "=4.5.0", features = ["derive"] }
base64 = "0.22"
phf = { version = "0.11", features = ["macros"] }
anyhow = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
flate2 = "1"
# dev
proptest = "1.4"
assert_cmd = "2.0"
pretty_assertions = "1.4"
tempfile = "3.10"
