[package]
name = "batdeob-cli"
version = "0.1.0"
description = "Static-analysis deobfuscator for Windows batch / cmd / PowerShell / VBS / JScript samples. CLI that reports IOCs, decoded scripts, and extracted child payloads without ever executing the input."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../../README.md"
keywords = ["deobfuscation", "malware", "batch", "powershell", "forensics"]
categories = ["command-line-utilities", "parser-implementations"]

[[bin]]
name = "batdeob"
path = "src/main.rs"

[dependencies]
batdeob-core = { path = "../batdeob-core", version = "0.1.0" }
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha2 = { workspace = true }
hex = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
predicates = { workspace = true }
base64 = { workspace = true }
# AES + gzip used in `deob_writes_recovered_pe_blob_and_meta_file` to
# synthesize a minimal AES-chain dropper end-to-end (CLI test verifies
# the recovered `.exe` + `.meta` are written to the out-dir).
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
flate2 = "1"
