[package]
name = "batdeob-cli"
version = "0.1.0"
description = "Static-analysis deobfuscator CLI for Windows batch, cmd, PowerShell, VBS, and JScript samples."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../../README.md"
keywords = ["deobfuscation", "malware", "batch", "powershell", "forensics"]
categories = ["command-line-utilities", "parser-implementations"]

[[bin]]
name = "batdeob"
path = "src/main.rs"

[dependencies]
batdeob-core = { path = "../batdeob-core", version = "0.1.0" }
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha2 = { workspace = true }
hex = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
predicates = { workspace = true }
base64 = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
flate2 = { workspace = true }
